--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<!--<h2><%= title %></h2>-->
+
+<div class="row">
+  <div class="col-md-6">
+    <h2>APIs</h2>
+    <div class="list-group">
+      <a class="list-group-item" href="/auth">Auth</a>
+    </div>
+  </div>
+</div>
+
