--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,9 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h2>APIs</h2>
+    <h2>salesforce APIs</h2>
     <div class="list-group">
-      <a class="list-group-item" href="/auth">Auth</a>
+      <a class="list-group-item" href="/salesforce/auth">Auth</a>
     </div>
   </div>
 </div>
