--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,16 @@
-<!--<h2><%= title %></h2>-->
 
 <div class="row">
   <div class="col-md-6">
-    <h2>salesforce APIs</h2>
+    <h2>Authenticate</h2>
     <div class="list-group">
       <a class="list-group-item" href="/salesforce/auth">Auth</a>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <h2>Account</h2>
+    <div class="list-group">
+      <a class="list-group-item" href="/salesforce/account/create">Create</a>
     </div>
   </div>
 </div>
