--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
   <div class="col-md-6">
     <h2>Account</h2>
     <div class="list-group">
+      <a class="list-group-item" href="/salesforce/account/query">Query</a>
       <a class="list-group-item" href="/salesforce/account/create">Create</a>
     </div>
   </div>
