--- a/views/salesforce/account/query.ejs
+++ b/views/salesforce/account/query.ejs
@@ -1,15 +1,10 @@
 
-<h4>Create Account</h4>
+<h4>Query Accounts</h4>
 
 <div class="row">
   <div class="col-sm-12">
-    <form action="/salesforce/account/create" method="POST">
-      <div class="form-group">
-        <label>Name:</label>
-        <input type="text" name="name" value="<%if (data.params.name) { %><%= data.params.name %><% } %>">
-      </div>
-
-      <button type="submit" class="btn btn-success">Create</button>
+    <form action="/salesforce/account/query" method="POST">
+      <button type="submit" class="btn btn-success">Query</button>
     </form>
   </div>
 </div>
