--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,11 @@
     <div class="list-group">
       <a class="list-group-item" href="/salesforce/auth">Auth</a>
     </div>
+
+    <h2>IP Address</h2>
+    <div class="list-group">
+      <a class="list-group-item" href="/ipify">ipify</a>
+    </div>
   </div>
 
   <div class="col-md-6">
