--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,14 @@
   </div>
 
   <div class="col-md-6">
+    <h2>Contact</h2>
+    <div class="list-group">
+      <a class="list-group-item" href="/salesforce/contact/query">Query</a>
+      <a class="list-group-item" href="/salesforce/contact/create">Create</a>
+    </div>
+  </div>
+
+  <div class="col-md-6">
     <h2>Account</h2>
     <div class="list-group">
       <a class="list-group-item" href="/salesforce/account/query">Query</a>
