--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,18 +5,30 @@
     <div class="list-group">
       <a class="list-group-item" href="/salesforce/auth">Auth</a>
     </div>
+  </div>
 
+  <div class="col-md-6">
     <h2>IP Address</h2>
     <div class="list-group">
       <a class="list-group-item" href="/ipify">ipify</a>
     </div>
   </div>
+</div>
 
+<div class="row">
   <div class="col-md-6">
     <h2>Contact</h2>
     <div class="list-group">
       <a class="list-group-item" href="/salesforce/contact/query">Query</a>
       <a class="list-group-item" href="/salesforce/contact/create">Create</a>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <h2>Lead</h2>
+    <div class="list-group">
+      <a class="list-group-item" href="/salesforce/lead/query">Query</a>
+      <a class="list-group-item" href="/salesforce/lead/create">Create</a>
     </div>
   </div>
 
