--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
     <h2>Contact</h2>
     <div class="list-group">
       <a class="list-group-item" href="/salesforce/contact/query">Query</a>
+      <a class="list-group-item" href="/salesforce/contact/find">Find</a>
       <a class="list-group-item" href="/salesforce/contact/create">Create</a>
     </div>
   </div>
