--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
       <a class="list-group-item" href="/salesforce/contact/query">Query</a>
       <a class="list-group-item" href="/salesforce/contact/find">Find</a>
       <a class="list-group-item" href="/salesforce/contact/create">Create</a>
+      <a class="list-group-item" href="/salesforce/contact/upsert">Upsert</a>
     </div>
   </div>
 
