--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,11 @@
       <a class="list-group-item" href="/salesforce/account/query">Query</a>
       <a class="list-group-item" href="/salesforce/account/create">Create</a>
     </div>
+
+    <h2>Chatter</h2>
+    <div class="list-group">
+      <a class="list-group-item" href="/salesforce/chatter/me">Me</a>
+    </div>
   </div>
 </div>
 
