--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,7 @@
     <h2>Chatter</h2>
     <div class="list-group">
       <a class="list-group-item" href="/salesforce/chatter/me">Me</a>
+      <a class="list-group-item" href="/salesforce/chatter/group/post">Post to Group</a>
     </div>
   </div>
 </div>
